revision 15 - 20100530:                                             |
    * Now correctly working under FreeBSD. Special thanks to        |
      Thuglife from adslgr.com for the relevant patch               |
    * 3 test mode combinations available, selectable via combobox   |
    * Ping timeout reduced to 1 sec                                 |
    * Download test duration reduced to 15 sec                      |
    * Copy to clipboard confirmation via label instead of msgbox    |
    * Some minor changes to vBulletin and HTML output format        |


revision 14 - 20100529:                                             |
    * Now correctly working under Mac OS X. Special thanks to:      |
      1. Vag from madseeds.com for giving remote access to a Mac Pro|
      2. greatst from insomnia.gr for additional testing            |
    * Added tooltips which explain some of the options or buttons   |
    * Updated embedded target list                                  |


revision 13 - 20100525:                                             |
    * Fixed a small compiling error under non-Windows OS            |


revision 12 - 20100525:                                             |
    * Considerably more accurate OS version reporting under Windows |
    * A QSplitter widget between log console and results console    |
      that allows for vertical resizing of said consoles            |


revision 11 - 20100525:                                             |
    * Notification when a new program version is available          |
    * Temporary workaround for upstream QTBUG-8914: replaced FTP    |
      download links with HTTP ones                                 |
    * Print group average packet loss and rank in HTML and vB code  |
    * Moved hardcoded download speed test targets to qspeedtest.ini |
    * Updated embedded target list                                  |


revision 10 - 20100524:                                             |